# sismo-voluntarios

./: .env.example  .gitattributes  .gitignore  AGENTS.md  dev.sh
apps/api/: .dockerignore  Dockerfile  Dockerfile.dev  capture-mobile.cjs  compose-mobile.cjs  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  seed_video.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_add_activity_end_time.py  003_add_notifications.py  004_add_contact_info.py  005_add_user_photo.py  006_add_user_phone.py  007_add_google_photo_url.py  008_backfill_google_photo_url.py  009_add_member_status.py  010_add_user_auth_source.py  011_add_activity_external_official.py  012_ext_certificate.py  013_incubator.py  014_add_activity_internal.py  015_sep_code_challenge.py  016_activity_evidence.py  017_media_assets.py  018_activity_validation.py  019_add_activity_private.py  020_add_realized_hours.py  021_add_user_profile_fields.py  022_add_activity_demo.py  023_add_ceded_by.py  (+1 more)
apps/api/app/: main.py
apps/api/scripts/: cleanup_demo_activities.py  delete_sheet_users.py  fetch_becarios_html.py  migrate_media_to_storage.py  scrape_becarios_photos.py  seed.py  seed_demo_activities.py  seed_example_activities.py  seed_sheet_users.py  warm_cache.py
apps/api/tests/: conftest.py  factories.py  test_activity_evidence.py  test_activity_validation.py  test_activity_visibility.py  test_auth.py  test_ceder_cupo.py  test_incubator.py  test_mass_creation.py  test_partner_api.py  test_qa_walkthrough.py  test_referral.py  test_session.py
video/: index.html  (+8 more)
(+226 files in other folders)
