[project]
name = "sismo-voluntarios-api"
version = "0.1.0"
description = "Sismo Voluntarios API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "PyJWT[crypto]>=2.9.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
